[gd_scene load_steps=7 format=3 uid="uid://cg4xfm6budepy"]

[ext_resource type="Texture2D" uid="uid://dux73gk24u61g" path="res://Assets/Tilesheets/Interface/Modern_UI_Style_2_32x32.png" id="1_75us7"]
[ext_resource type="Script" path="res://Scenes/UIScenes/load_game_slot.gd" id="2_vnxys"]
[ext_resource type="FontFile" uid="uid://c7dcfakj1xiji" path="res://Assets/Fonts/Kenney Mini Square Mono.ttf" id="2_yq3b5"]
[ext_resource type="FontFile" uid="uid://canpo2eqq0nj7" path="res://Assets/Fonts/Kenney Pixel.ttf" id="3_mpl48"]
[ext_resource type="PackedScene" uid="uid://bs2xbbjdwope6" path="res://Scenes/UIScenes/button.tscn" id="4_bipxj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7da8g"]
atlas = ExtResource("1_75us7")
region = Rect2(416, 804, 32, 28)

[node name="LoadGameSlot" type="NinePatchRect"]
custom_minimum_size = Vector2(160, 288)
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("1_75us7")
region_rect = Rect2(24, 468, 48, 52)
patch_margin_left = 16
patch_margin_top = 20
patch_margin_right = 16
patch_margin_bottom = 16
script = ExtResource("2_vnxys")

[node name="LoadGameContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="LoadGameContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2

[node name="PlayerName" type="Label" parent="LoadGameContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.227451, 0.227451, 0.313726, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 3
theme_override_constants/line_spacing = -6
theme_override_fonts/font = ExtResource("2_yq3b5")
theme_override_font_sizes/font_size = 16
text = "<PLayer Name>"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Level" type="Label" parent="LoadGameContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.227451, 0.227451, 0.313726, 1)
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("3_mpl48")
theme_override_font_sizes/font_size = 16
text = "<Player Level>"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="PlayerPackets" type="HBoxContainer" parent="LoadGameContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PacketIcon" type="TextureRect" parent="LoadGameContainer/VBoxContainer/PlayerPackets"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = SubResource("AtlasTexture_7da8g")
expand_mode = 1

[node name="Packets" type="Label" parent="LoadGameContainer/VBoxContainer/PlayerPackets"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.227451, 0.227451, 0.313726, 1)
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("3_mpl48")
theme_override_font_sizes/font_size = 16
text = "<Packets>"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Separator" type="Control" parent="LoadGameContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="PlayerTitle" type="Label" parent="LoadGameContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.937255, 0.780392, 0.180392, 1)
theme_override_colors/font_shadow_color = Color(0.670588, 0.407843, 0.105882, 1)
theme_override_colors/font_outline_color = Color(0.956863, 0.866667, 0.364706, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 3
theme_override_constants/line_spacing = -6
theme_override_fonts/font = ExtResource("2_yq3b5")
theme_override_font_sizes/font_size = 16
text = "STAR WIZARD"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
uppercase = true

[node name="Separator2" type="Control" parent="LoadGameContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="Label" type="Label" parent="LoadGameContainer/VBoxContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.698039, 0.682353, 0.796078, 1)
theme_override_colors/font_shadow_color = Color(0.227451, 0.227451, 0.313726, 1)
theme_override_constants/shadow_outline_size = 2
theme_override_constants/line_spacing = -1
theme_override_fonts/font = ExtResource("3_mpl48")
theme_override_font_sizes/font_size = 16
text = "Pending Objective:"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="LastObjective" type="Label" parent="LoadGameContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.227451, 0.227451, 0.313726, 1)
theme_override_constants/shadow_outline_size = 2
theme_override_constants/line_spacing = -1
theme_override_fonts/font = ExtResource("3_mpl48")
theme_override_font_sizes/font_size = 16
text = "Talk to alex to get your rewards"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="LoadGameContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="Load" parent="LoadGameContainer/VBoxContainer2" instance=ExtResource("4_bipxj")]
layout_mode = 2
size_flags_vertical = 8
text = "Load Game"

[node name="Delete" parent="LoadGameContainer/VBoxContainer2" instance=ExtResource("4_bipxj")]
layout_mode = 2
size_flags_vertical = 8
text = "Delete"

[node name="NewGameContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="GameEmpty" type="Label" parent="NewGameContainer"]
custom_minimum_size = Vector2(96, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.227451, 0.227451, 0.313726, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("3_mpl48")
theme_override_font_sizes/font_size = 16
text = "Game Empty"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="NewGame" parent="NewGameContainer" instance=ExtResource("4_bipxj")]
layout_mode = 2
size_flags_vertical = 8
text = "Start Game"

[connection signal="pressed" from="LoadGameContainer/VBoxContainer2/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="LoadGameContainer/VBoxContainer2/Delete" to="." method="_on_delete_pressed"]
[connection signal="pressed" from="NewGameContainer/NewGame" to="." method="_on_new_game_pressed"]
